# Spartan-Mobile

SpartanMobile/: App.tsx  app.json  package.json
SpartanMobile/android/: settings.gradle
SpartanMobile/android/app/: build.gradle
SpartanMobile/android/app/src/main/java/com/spartanmobile/: MainActivity.kt  MainApplication.kt  RustBridgeModule.kt  RustModulePackage.kt
SpartanMobile/android/app/src/main/res/values/: strings.xml
SpartanMobile/ios/: Podfile
SpartanMobile/ios/SpartanMobile/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
SpartanMobile/ios/SpartanMobile.xcodeproj/: project.pbxproj
SpartanMobile/ios/SpartanMobile.xcodeproj/xcshareddata/xcschemes/: SpartanMobile.xcscheme
SpartanMobile/ios/SpartanMobileTests/: SpartanMobileTests.m
SpartanWrapper/: Cargo.toml
SpartanWrapper/src/: lib.rs
